refactor : weed out magic numbers and fix some failing tests